Capitalized first letters in titles: gene + phen page

--- a/WebContent/resources/documentation/phenotype-help.html
+++ b/WebContent/resources/documentation/phenotype-help.html
@@ -63,15 +63,15 @@
                                 <li><a href="gene-help.html">Genes</a></li>
                                 <li><a href="phenotype-help.html">Phenotypes</a> 
                                     <ul>
-                                        <li><a href="phenotype-help.html#details">Phenotype details</a></li>
-                                        <li><a href="phenotype-help.html#phenotype-stats-panel">Phenotype association stats</a>
+                                        <li><a href="phenotype-help.html#details">Phenotype Details</a></li>
+                                        <li><a href="phenotype-help.html#phenotype-stats-panel">Phenotype Association Stats</a>
                                             <ul> <li> <a href="phenotype-help.html#phenGraphs">Overview Graphs </a> </li> </ul>
                                         </li>
-                                        <li><a href="phenotype-help.html#associations">Gene-Phenotype associations</a>
+                                        <li><a href="phenotype-help.html#associations">Gene-Phenotype Associations</a>
                                             <ul>
-                                                <li><a href="phenotype-help.html#dvi">Direct vs. inferred associations</a></li>
-                                                <li><a href="phenotype-help.html#table-filtering">Table filtering</a></li>
-                                                <li><a href="phenotype-help.html#table-download">Downloading results</a></li>
+                                                <li><a href="phenotype-help.html#dvi">Direct vs. Inferred Associations</a></li>
+                                                <li><a href="phenotype-help.html#table-filtering">Table Filtering</a></li>
+                                                <li><a href="phenotype-help.html#table-download">Downloading Results</a></li>
                                             </ul>
                                         </li>
                                     </ul>
@@ -94,13 +94,13 @@
 
                         <div class="content node">
 
-                            <h1>Explore the diverse entry points to mouse phenotype data.</h1>
+                            <h1>Explore the Diverse Entry Points to Mouse Phenotype Data.</h1>
 
                             <p>
                                 Our phenotype page consists of three main parts: the phenotype information/details, the gene associations summary and the table of gene variants associated with the current phenotype.
                             </p>
 
-                            <h3><a name="details" href='#'>Phenotype details</a></h3>
+                            <h3><a name="details" href='#'>Phenotype Details</a></h3>
                             
                             <p>The synonyms and definition we provide come from the mouse phenotype ontology (MP). This is also why we provide the MP id of the current
                                 phenotype page as well as the link to it on the MGI MP browser.</p>
@@ -157,7 +157,7 @@
                             </p>
 														<p>[Tip] The bars are clickable and will take you to a graph page to closer analyze the data. </p>
 
-                            <h5> Time series Data  </h5>
+                            <h5> Time Series Data  </h5>
                             <figure>
                                 <img class="well" src="img/time-series-overview.png"/>
                             </figure>
@@ -175,7 +175,7 @@
 														<p>[Tip] You can select/deselect the categories to be ploted by clicking on them in the legend below the graph.</p>
 
 
-                            <h3><a name="associations" href='#'>Gene-Phenotype associations</a></h3>
+                            <h3><a name="associations" href='#'>Gene-Phenotype Associations</a></h3>
 
                             <p>All gene variants associated with the current phenotype are shown in a table. The table contains several fields of interest such 
                                 as gene name and the corresponding allele, zygosity, sex, data source, parameter, a link to the <a href="graph-help.html">graph</a> when one is available as well as the 
@@ -195,7 +195,7 @@
                             <img class="well" src="img/phenotype-top-level-table.png"/>
 
 
-                            <h3><a name="table-filtering" href='#'>Table filtering</a></h3>
+                            <h3><a name="table-filtering" href='#'>Table Filtering</a></h3>
 
                             <p>The filters over the gene variants associations table offer flexible filtering possibilities. Multiple checkboxes can be selected from any filter dropdown list 
                                 and the table will automatically reload with each new selected option. 
@@ -204,7 +204,7 @@
                             <img src ="img/phenotype-filters.png"/>
 
 
-                            <h3><a name="table-download" href='#'>Downloading results</a></h3>
+                            <h3><a name="table-download" href='#'>Downloading Results</a></h3>
                           
                             <p> The results in the table may be downloaded for further processing. The resulting download respects all filters that have been applied to the data.</p>
                             <p> We offer 2 export options for the data in the table: text file with tab separated variables (TSV) and Microsoft Excel spread sheet (XSL)</p>
