moved css and renamed js and css files

--- a/WebContent/image_compara/controlImagesError.html
+++ b/WebContent/image_compara/controlImagesError.html
@@ -3,7 +3,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=US-ASCII">
 <title>Image Comparator2</title>
-<link href="../css/comparaImage.css" rel="stylesheet" type="text/css" />
+<link href="image_compara.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
 <div class="image_select_error">Error - no control images were selected.</div>
