just some play with iframes

--- a/WebContent/image_compara/imageComparatorDiv.html
+++ b/WebContent/image_compara/imageComparatorDiv.html
@@ -6,7 +6,7 @@
 <link href="../css/default.css" rel="stylesheet" type="text/css" />
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 <script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/jquery-ui.min.js"></script>
-<script src="../js/imaging/imgComparator.js"></script>
+<script src="js/imgcomp.js"></script>
 <script>
 var ctrImgId=7779;
 </script>
@@ -17,16 +17,16 @@ var ctrImgId=7779;
  
 
  
-<div name="control" id="control" src="//wwwdev.ebi.ac.uk/mi/media/omero/webgateway/" name="top">
+<iframe name="control" id="control" src="http://www.ebi.ac.uk/mi/media/omero/webgateway/img_detail/89929/" width="50%">
 	<div name="navControl" id="navControl" src="imageNavigator.html?controlOrExp=control"></div>
-</div>
+</iframe>
 
 
  
 
-	<div name="experimental" id="experimental" src="" name="top">
+	<iframe name="experimental" id="experimental" src="http://www.ebi.ac.uk/mi/media/omero/webgateway/img_detail/89929/"  width="50%">
 	<div name="expControl" id="expControl" src="imageNavigator.html?controlOrExp=experimental"></div>
-</div>
+</iframe>
 
 
 
