--- a/WebContent/image_compara/imageNavigator.html
+++ b/WebContent/image_compara/imageNavigator.html
@@ -5,7 +5,7 @@
 <TITLE>A document with anchors with specific targets</TITLE>
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 <script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/jquery-ui.min.js"></script>
-<script src="image_compara.js"></script>
+<script src="js/image_compara.js"></script>
 <script type="text/javascript">
 var baseUrl="${baseUrl}";
 var solrUrl='http://wwwdev.ebi.ac.uk/mi/impc/dev/solr';
