removed some consoles from image compara and changed error message to not be an error when no image for control or exp selected

--- a/WebContent/image_compara/control_images_error.html
+++ b/WebContent/image_compara/control_images_error.html
@@ -6,6 +6,6 @@
 <link href="image_compara.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
-<div class="image_select_error">Error - no control images were selected.</div>
+<div class="image_select_error">No control images were selected.</div>
 </body>
 </html>
