--- a/WebContent/image_compara/experimental_images_error.html
+++ b/WebContent/image_compara/experimental_images_error.html
@@ -5,4 +5,4 @@
 <title>Image Comparator2</title>
 <link href="image_compara.css" rel="stylesheet" type="text/css" />
 </head>
-<div class="image_select_error">Error - no experimental images were selected.</div>
+<div class="image_select_error">No experimental images were selected.</div>
