--- a/WebContent/image_compara/image_compara.html
+++ b/WebContent/image_compara/image_compara.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=US-ASCII">
-<title>Image Comparator2</title>
+<title>Image Comparator</title>
 <link href="../css/default.css" rel="stylesheet" type="text/css" />
 <script>
 var ctrImgId=7779;
