added a back to image picker button so people don't need to push the back button in the browser many times. Problem is it forgets the selected images - no time now - version 2..

--- a/WebContent/image_compara/imageNavigator.html
+++ b/WebContent/image_compara/imageNavigator.html
@@ -16,7 +16,7 @@
                 <div class="block">
                     <div class="content">
                     	<div class="section">
-                               
+                               <div id="back"></div>
     								<div class="caption">
     										<div class="btn" id="prev">< < Previous</div>
     										<div class="btn" id="next">Next > ></div>
